--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,6 @@
     <h1>Score City</h2>
     <p>Your all-time soccer tracker and news platform</p>
     <div class="ctaBtnBox">
-        <a href="login.html" class="ctaBtn signupBtn">Signup</a>
+        <a href="/login" class="ctaBtn signupBtn">Signup</a>
     </div>
 </div>
