--- a/views/fixtures.handlebars
+++ b/views/fixtures.handlebars
@@ -2,27 +2,22 @@
   <h1 class="leagueStandingsTitle"><span>GAME PREDICTIONS</span></h1>
   <div class="row">
     <div class="col-sm-offset-2 col-sm-8">
-      <div class="box">
-        <div class="teamLogo1">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Real_Madrid_CF.svg/1200px-Real_Madrid_CF.svg.png"
-            alt=""
-            class="team1"
-          />
-          <p class="team1Name">Real Madrid</p>
+
+      {{#each fixturesData}}
+        <div class="box">
+          <div class="teamLogo1">
+            <img src="{{homelogo}}" alt="" class="team1" />
+            <p class="team1Name">{{hometeam}}</p>
+          </div>
+          <div class="scoreText">
+            <p>{{homegoal}}-{{awaygoal}}</p>
+          </div>
+          <div class="teamLogo2">
+            <img src="{{awaylogo}}" alt="" class="team1" />
+            <p class="team1Name">{{awayteam}}</p>
+          </div>
         </div>
-        <div class="scoreText">
-          <p>3-2</p>
-        </div>
-        <div class="teamLogo2">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Real_Madrid_CF.svg/1200px-Real_Madrid_CF.svg.png"
-            alt=""
-            class="team1"
-          />
-          <p class="team1Name">Real Madrid</p>
-        </div>
-      </div>
+      {{/each}}
 
     </div>
   </div>
