--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,13 @@
   <body>
     <div class="container">
       <nav>
-        <a href="index.html" class="logo"><h1><span>S</span>CC</h1></a>
+        <a href="/" class="logo"><h1><span>S</span>CC</h1></a>
+
+        <div class="navLinks">
+          <a href="/fixtures" class="pageLinks">PREDICTIONS</a>
+          <a href="/leaguestandings" class="pageLinks">STANDINGS</a>
+          <a href="/topscorer" class="pageLinks">PLAYER RANKINGS</a>
+        </div>
         <div class="social">
 
           <a href=""><i class="fa fa-facebook fa-2x icon"></i></a>
@@ -35,6 +41,6 @@
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     ></script>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
